# nemo_pipeline

./: .gitignore  README.md  pyproject.toml
examples/: describe_example_pipeline.sh  eORCA025_ERA5v1_OSNAP_config.ini  example_OSNAP_config.ini  example_config.toml  run_eORCA025_ERA5v1_OSNAP_pipeline.sh  run_example_pipeline.sh  submit_eORCA025_ERA5v1_OSNAP_pipeline.sh  submit_example_pipeline.sh
examples/NOC-NPD/: eORCA1_ERA5v1_OSNAP_config.toml  eORCA1_ERA5v1_RAPID_config.toml  submit_eORCA1_ERA5v1_OSNAP_pipeline.sh  submit_eORCA1_ERA5v1_RAPID_pipeline.sh
examples/NOC-NPD/eORCA025/: eORCA025_ERA5v1_BS_config.toml  eORCA025_ERA5v1_DS_config.toml  eORCA025_ERA5v1_FS_config.toml  eORCA025_ERA5v1_GSR_config.toml  eORCA025_ERA5v1_MOVE_config.toml  eORCA025_ERA5v1_NOAC_config.toml  eORCA025_ERA5v1_OSNAP_config.toml  eORCA025_ERA5v1_RAPID_config.toml  eORCA025_ERA5v1_SAMBA_config.toml  submit_eORCA025_ERA5v1_BS_pipeline.sh  submit_eORCA025_ERA5v1_DS_pipeline.sh  submit_eORCA025_ERA5v1_FS_pipeline.sh  submit_eORCA025_ERA5v1_GSR_pipeline.sh  submit_eORCA025_ERA5v1_MOVE_pipeline.sh  submit_eORCA025_ERA5v1_NOAC_pipeline.sh  submit_eORCA025_ERA5v1_OSNAP_pipeline.sh  submit_eORCA025_ERA5v1_RAPID_pipeline.sh  submit_eORCA025_ERA5v1_SAMBA_pipeline.sh
examples/NOC-NPD/eORCA1/: eORCA1_ERA5v1_BS_config.toml  eORCA1_ERA5v1_DS_config.toml  eORCA1_ERA5v1_FS_config.toml  eORCA1_ERA5v1_GSR_config.toml  (+14 more)
nemo_pipeline/: __init__.py  argparser.py  cli.py  diagnostics.py  pipeline.py  submit.py  utils.py
nemo_pipeline/diagnostics/: __init__.py  core.py  usrdef.py
(+18 files in other folders)
